# Simulator

./: CMakeLists.txt  README.md  binaryDataTest.txt  file.txt  processor.cpp  programCounter.cpp  test-processor.cpp  test-programCounter.cpp
files/: InstructionsDecodingData.txt  SimpleAddTest.txt  SimpleFactorialAssembly.txt  SimpleFactorialProgram.cpp
inc/: memory.h  processor.h  programCounter.h
